examples/01-clean-code-arch-simple/src/domain/customer/errors/invalid-customer-id-error.ts
export class InvalidCustomerIdError extends Error {
  constructor(message: string) {
    super(message);
    this.name = "InvalidCustomerIdError";
  }
}
